前台服务在定制系统下，gg
整理所有的尝试内容，应用层无效果

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ProtectService</string>
+    <string name="accessibility_service_label">accessibility_service_label</string>
+    <string name="accessibility_description">accessibility_description</string>
 </resources>
